fix: ajustes nas configs